Stylistic fixes, also fix alignment in the table

--- a/zapisy/apps/theses/assets/theses_app/components/ThesesTable/style.less
+++ b/zapisy/apps/theses/assets/theses_app/components/ThesesTable/style.less
@@ -24,7 +24,11 @@
 .ReactVirtualized__Table__rowColumn {
     height: 30px;
     display: flex; 
-    align-items: center; 
+    align-items: center;
+}
+
+// All headers & the reservation column want vertical centering
+.ReactVirtualized__Table__headerColumn, .reservation_cell {
     justify-content: center;
 }
 
